change database lowdb to mongodb cloud

--- a/views/books/rent.pug
+++ b/views/books/rent.pug
@@ -10,7 +10,10 @@ block content
     each item in list
       tr 
         td
-          img(src="/", alt="")
+          if item.coverUrl
+            img(src=item.coverUrl, alt="", width="64")
+          else
+            img(src="/book.png", alt="", width="64")
         td= item.title
         td  
           p= item.description
