Note for login page

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -15,4 +15,18 @@ block content
           input#password.form-control(type="password", name="pass", value=values ? values.pass : "", required)
       
       button.btn.btn-primary Login
+    h5 Note:
+      table.table
+        th User
+        th Password
+        th isAdmin
+        tr
+          td khoa@gmail.com
+          td 123123
+          td False
+        tr 
+          td helios.msv@gmail.com
+          td 123123
+          td True
+    
 
